# C-with-class

./: LICENSE  README.md  meson.build
src/: child.c  parent.c
src/complex-inheritance/: child.c  main.c  meson.build  parent.c  parent.h
src/simple-inheritance/: child.h  main.c  meson.build  parent.h
